First Titanic submissions

--- a/titanic/explore.ipynb
+++ b/titanic/explore.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "1249a559-1e2c-4505-bea3-76a324a95642",
    "metadata": {},
    "outputs": [
@@ -265,19 +265,85 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.train"
+    "train = data.train\n",
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d63c9ca3-cfba-4700-b47c-abf5759ce8f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    549\n",
+       "1    342\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.Survived.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d28575b-20f7-412b-ae0a-d5e4ef1605c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18890814558058924"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train[(train.Sex == \"male\") & train.Survived]) / len(train[train.Sex == \"male\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2d43d2f6-b893-41b6-90ef-2fcba81153b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7420382165605095"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train[(train.Sex == \"female\") & train.Survived]) / len(train[train.Sex == \"female\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d63c9ca3-cfba-4700-b47c-abf5759ce8f4",
+   "id": "5f7fe65f-c561-4d8b-9ec4-dac2b3e88698",
    "metadata": {},
    "outputs": [],
    "source": []
