--- a/titanic/results.ipynb
+++ b/titanic/results.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "c30f04f8-7d81-409d-badb-870bc9e3a8a5",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "<module 'models' from '/Users/gthill/projects/data-practice/titanic/models.py'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,17 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "e410b7de-8d42-4f89-831b-d25d4df21bdd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy = models.dummy_model()"
+    "dummy_model = models.DummyModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "id": "9a9ac465-632d-465c-942e-f9b6cf8cb22a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy = dummy_model.get_split_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "672087ad-f8ee-45f1-94b8-8fdead6a2ec8",
    "metadata": {},
    "outputs": [
@@ -62,7 +72,7 @@
        "0.6256983240223464"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "id": "7e7639af-f9ce-4a37-9545-3e69dca8035c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_refit = dummy_model.get_refit_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2e3ca914-1087-4eae-90f3-c66ca24b381d",
    "metadata": {},
    "outputs": [],
@@ -91,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "32c52add-d68a-44d5-b59f-9ae94ea964a0",
    "metadata": {},
    "outputs": [],
@@ -101,28 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "980befc6-1272-418b-823a-14cbfad38df7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8100558659217877"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models.evaluate(gender_only)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "92d3d6a4-5fe2-4f9f-93cb-20a9c3e375ae",
    "metadata": {},
    "outputs": [],
@@ -132,21 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5c72ea54-fb35-4103-8d36-26907e4cedff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[2.36777921]]), array([-1.3759623]))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gender_only[\"classifier\"].coef_, gender_only[\"classifier\"].intercept_"
    ]
@@ -161,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e08b42a7-29b2-49e9-a6d0-a1f2744ad876",
    "metadata": {},
    "outputs": [],
@@ -171,28 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "83cf1173-4b9f-4c50-ac33-f9b271d1036c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8491620111731844"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models.evaluate(full_linear)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0e50f62b-7a45-4ee2-9944-3852bd7a48c5",
    "metadata": {},
    "outputs": [],
@@ -202,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "29051b98-73b9-4e1f-908a-f6b33f4da302",
    "metadata": {},
    "outputs": [],
@@ -212,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3537ccc4-a8b4-4e1b-9ae7-a86e7759133e",
    "metadata": {},
    "outputs": [],
@@ -222,43 +209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b72b2678-13f3-4e9f-a6f9-47500739b620",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.04641589])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.C_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a51b617a-b05b-4122-88a7-c085a512087f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.61538462, 0.61538462, 0.74825175, 0.82517483, 0.83916084,\n",
-       "       0.83916084, 0.83916084, 0.83916084, 0.83916084, 0.83916084])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.scores_[1][0]"
    ]
@@ -273,109 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "04f55b17-b3d1-4960-bcb0-b795b9cf7515",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coef</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pclass</td>\n",
-       "      <td>-0.592284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Age</td>\n",
-       "      <td>-0.301558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SibSp</td>\n",
-       "      <td>-0.201594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Parch</td>\n",
-       "      <td>-0.019048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Fare</td>\n",
-       "      <td>0.121091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Sex_female</td>\n",
-       "      <td>0.905760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Sex_male</td>\n",
-       "      <td>-0.905759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Embarked_C</td>\n",
-       "      <td>0.084168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Embarked_Q</td>\n",
-       "      <td>0.101072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Embarked_S</td>\n",
-       "      <td>-0.185239</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         coef     value\n",
-       "0      Pclass -0.592284\n",
-       "1         Age -0.301558\n",
-       "2       SibSp -0.201594\n",
-       "3       Parch -0.019048\n",
-       "4        Fare  0.121091\n",
-       "5  Sex_female  0.905760\n",
-       "6    Sex_male -0.905759\n",
-       "7  Embarked_C  0.084168\n",
-       "8  Embarked_Q  0.101072\n",
-       "9  Embarked_S -0.185239"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models.coefs(prep.column_names, clf.coef_[0])"
    ]
@@ -398,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "8cd56db5-0463-4cca-998c-b2e321bd3cf5",
    "metadata": {},
    "outputs": [],
@@ -408,28 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "8cd9e2a7-1275-4a55-a2b2-7c49653109d8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8379888268156425"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models.evaluate(forest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "18e7ff7b-158b-438a-83b6-dc516879870a",
    "metadata": {},
    "outputs": [],
